--- a/signup.html
+++ b/signup.html
@@ -12,17 +12,16 @@
         <a href="index.html">
             <h2 id="logo">Love Running</h2>
         </a>
-        <nav>
-            <ul id="menu">
+        <nav id="menu">
+            <ul>
                 <li>
-                    <a class="active" href="signup.html">Sign Up</a>
+                    <a class="active" href="Index.html">Home</a>
                 </li>
                 <li>
                     <a href="gallery.html">Gallery</a>
                 </li>
-
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="signup.html">Sign Up</a>
                 </li>
             </ul>
         </nav>
